--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
 	<script defer src='/build/bundle.js'></script>
 </head>
 
-<body>
+<body class="has-background-dark has-text-light">
 </body>
 </html>
